@@ -17,6 +17,10 @@
 
 	* pygtk-gtklabel.xml Fix typo.
 
+	* pygtk-gtkliststore.xml (set_column_types)
+	(iter_is_valid) (reorder) (swap) (move_after) (move_before) Add
+	descriptions for these methods.
+
 2004-04-13  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtkexpander.xml Add.
